add a note about how long levels should take.

--- a/TODO
+++ b/TODO
@@ -24,6 +24,14 @@ Levels [to be implemented]
   - Level 8: Elite Guard
   - Level 9: Citadel 
 
+Each level is split into 4 sections:
+Section 1 is 3 minutes long
+Section 2 is 3 minutes long
+Section 3 is 3 minutes long
+Section 4 is the boss fight, which takes hoe long it takes.
+
+Total game play, minimum: 81 minutes.
+
 Sound [to be implemented]
 - Music
 - Effects
